--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,68 +41,17 @@ on:
 env:
   GITHUB_TOKEN: ${{ github.token }}
 
-# --------------------------------------------------
-# Check inputs
-# --------------------------------------------------
 jobs:
-  check-inputs:
+  # 1. Préparation : On calcule la version une seule fois pour tout le monde
+  prepare:
     runs-on: ubuntu-latest
-    steps:
-      - name: Exit if stable without description
-        if: ${{ inputs.stable && !inputs.description }}
-        run: |
-          echo "❌ Missing description for a stable release"
-          exit 1
-
-      - name: Warn if skip-build enabled
-        if: ${{ inputs.skip-build }}
-        run: |
-          echo "⚠️ skip-build enabled: no binary will be generated"
-
-  # --------------------------------------------------
-  # Build job
-  # --------------------------------------------------
-  build:
-    runs-on: ubuntu-latest
-    needs: [check-inputs]
-
     outputs:
       next-version: ${{ steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}
-      is-stable: ${{ inputs.stable }}
-      skip-build: ${{ inputs.skip-build }}
-
     steps:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
-      - uses: actions/setup-node@v5
-        with:
-          node-version: 20.x
-          cache: npm
-
-      - name: Clear npm cache
-        if: ${{ inputs.reset-cache }}
-        run: npm cache clean --force
-
-      - uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-
-      - run: npm install
-
-      - name: Get latest release tag
-        id: get-latest-tag
-        uses: pozetroninc/github-action-get-latest-release@master
-        with:
-          repository: ClementR22/MK8DSB
-          excludes: prerelease
-
-      # -------------------------
-      # Versioning
-      # -------------------------
-      - name: Calculate next stable version
+      - name: Calculate stable version
         id: version_build
         if: ${{ inputs.stable }}
         uses: reecetech/version-increment@2024.10.1
@@ -110,186 +59,120 @@ jobs:
           scheme: semver
           increment: ${{ inputs.version-bump }}
           tag_prefix: v
-
-      - name: Get latest commit hash
-        id: get-latest-commit
-        run: echo "value=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-
+      - name: Get tag & commit
+        id: info
+        run: |
+          echo "tag=$(git tag -l --sort=-version:refname | grep -v '-' | head -n 1)" >> "$GITHUB_OUTPUT"
+          echo "hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
       - name: Store nightly version
         id: nightly-version
         if: ${{ !inputs.stable }}
-        run: |
-          BASE="${{ steps.get-latest-tag.outputs.release || 'v0.0.0' }}"
-          VERSION="$BASE-${{ steps.get-latest-commit.outputs.value }}"
-          echo "value=$VERSION" >> "$GITHUB_OUTPUT"
+        run: echo "value=${{ steps.info.outputs.tag || 'v0.0.0' }}-${{ steps.info.outputs.hash }}" >> "$GITHUB_OUTPUT"
 
-      # -------------------------
-      # Write version (IDEMPOTENT)
-      # -------------------------
-      - name: Update package.json & app.config.ts
+  # 2. Build : En parallèle sur les bons OS (macOS pour iOS, Ubuntu pour Android)
+  build:
+    needs: [prepare]
+    if: ${{ !inputs.skip-build }}
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - ${{ (inputs.platform == 'all' || inputs.platform == 'android') && 'android' || '' }}
+          - ${{ (inputs.platform == 'all' || inputs.platform == 'ios') && 'ios' || '' }}
+        exclude:
+          - platform: ""
+
+    runs-on: ${{ matrix.platform == 'ios' && 'macos-latest' || 'ubuntu-latest' }}
+
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v5
+        with:
+          node-version: 20.x
+          cache: npm
+      - uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - run: npm install
+
+      - name: Update Version Files
         run: |
-          VERSION="${{ inputs.stable && steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}"
+          VERSION="${{ needs.prepare.outputs.next-version }}"
           CLEAN_VERSION="${VERSION#v}"
+          # Update package.json
+          node -e "const fs = require('fs'); const pkg = require('./package.json'); pkg.version = '$CLEAN_VERSION'; fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
+          # Update app.config.ts (Fix for macOS sed incompatibility)
+          if [[ "$OSTYPE" == "darwin"* ]]; then
+            sed -i "" "s/{{VERSION}}/$VERSION/g" app.config.ts
+          else
+            sed -i "s/{{VERSION}}/$VERSION/g" app.config.ts
+          fi
 
-          node -e "
-          const fs = require('fs');
-          const pkg = require('./package.json');
-          if (pkg.version !== '$CLEAN_VERSION') {
-            pkg.version = '$CLEAN_VERSION';
-            fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
-            console.log('package.json updated');
-          } else {
-            console.log('Version already set, skipping');
-          }
-          "
-
-          sed -i "s/{{VERSION}}/$VERSION/g" app.config.ts
-
-      # -------------------------
-      # Platform Build
-      # -------------------------
-      - name: Increment Android Version Code
+      - name: Android Version Code
         id: android-version
-        if: ${{ !inputs.skip-build && (inputs.platform == 'android' || inputs.platform == 'all') }}
+        if: ${{ matrix.platform == 'android' }}
         run: |
-          CURRENT_VCODE=$(eas app:inspect --platform android --non-interactive 2>/dev/null \
-            | grep versionCode | awk '{print $2}' | tr -d '",')
-          CURRENT_VCODE=${CURRENT_VCODE:-0}
-          echo "value=$((CURRENT_VCODE + 1))" >> "$GITHUB_OUTPUT"
+          VCODE=$(eas app:inspect --platform android --non-interactive 2>/dev/null | grep versionCode | awk '{print $2}' | tr -d '",') || echo "0"
+          echo "value=$((${VCODE:-0} + 1))" >> "$GITHUB_OUTPUT"
 
-      - name: Build Binaries
-        if: ${{ !inputs.skip-build }}
+      - name: Build Binary
         env:
           ANDROID_VERSION_CODE: ${{ steps.android-version.outputs.value }}
-        run: |
-          if [ "${{ inputs.platform }}" == "all" ]; then
-            echo "🚀 Building for both Android and iOS..."
-            eas build --platform android --profile preview --local --non-interactive
-            eas build --platform ios --profile preview --local --non-interactive
-          else
-            echo "🚀 Building for ${{ inputs.platform }}..."
-            eas build --platform ${{ inputs.platform }} --profile preview --local --non-interactive
-          fi
+        run: eas build --platform ${{ matrix.platform }} --profile preview --local --non-interactive --app-version-source local
 
-      - name: Rename and Hash Artifacts
-        if: ${{ !inputs.skip-build }}
+      - name: Package Artifact
         run: |
-          VERSION="${{ inputs.stable && steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}"
+          VERSION="${{ needs.prepare.outputs.next-version }}"
           PREFIX="${{ inputs.stable && 'mk8dsb_' || 'mk8dsb-nightly_' }}"
-
-          # Rename APK if exists
+          FILE_NAME=""
           if [ -f build-*.apk ]; then
-            mv build-*.apk "${PREFIX}${VERSION}.apk"
-            sha256sum "${PREFIX}${VERSION}.apk" >> sha256sum.txt
+            FILE_NAME="${PREFIX}${VERSION}.apk"
+            mv build-*.apk "$FILE_NAME"
+          elif [ -f build-*.ipa ]; then
+            FILE_NAME="${PREFIX}${VERSION}.ipa"
+            mv build-*.ipa "$FILE_NAME"
           fi
+          # Checksum generation
+          shasum -a 256 "$FILE_NAME" > "checksum-${{ matrix.platform }}.txt"
 
-          # Rename IPA if exists
-          if [ -f build-*.ipa ]; then
-            mv build-*.ipa "${PREFIX}${VERSION}.ipa"
-            sha256sum "${PREFIX}${VERSION}.ipa" >> sha256sum.txt
-          fi
-
-      - name: Upload artifacts
-        if: ${{ !inputs.skip-build }}
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: artifacts
+          name: build-${{ matrix.platform }}
           path: |
             *.apk
             *.ipa
-            sha256sum.txt
+            checksum-*.txt
+          if-no-files-found: error
 
-      - name: Upload package.json
-        uses: actions/upload-artifact@v4
-        with:
-          name: package-json
-          path: package.json
-
-  # --------------------------------------------------
-  # Nightly release
-  # --------------------------------------------------
-  nightly:
-    if: ${{ !inputs.stable && !inputs.skip-build }}
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: artifacts
-
-      - name: Publish nightly release
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ github.token }}
-          tag: nightly-${{ needs.build.outputs.next-version }}
-          name: Nightly ${{ needs.build.outputs.next-version }}
-          prerelease: true
-          body: |
-            ⚠️ Unstable build – use at your own risk
-
-            ${{ inputs.description || 'No description provided' }}
-
-            **Commit:** ${{ github.sha }}
-          artifacts: "mk8dsb-nightly_*,sha256sum.txt"
-
-  # --------------------------------------------------
-  # Stable release
-  # --------------------------------------------------
-  release:
-    if: ${{ inputs.stable && !inputs.skip-build }}
-    needs: [build]
+  # 3. Release : On regroupe les artefacts et on publie
+  publish:
+    needs: [prepare, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-
       - uses: actions/download-artifact@v4
         with:
-          name: artifacts
+          path: dist
+          pattern: build-*
+          merge-multiple: true
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: package-json
+      - name: Merge Checksums
+        run: cat dist/checksum-*.txt > sha256sum.txt
 
-      - name: Commit version bump
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add package.json
-          git commit -m "chore: bump version to ${{ needs.build.outputs.next-version }}" || echo "No changes"
-          git push origin HEAD:${{ github.ref_name }}
-
-      - name: Generate changelog
-        id: changelog
-        run: |
-          LAST_TAG=$(git tag -l --sort=-version:refname | grep -v '-' | head -n 2 | tail -n 1)
-          EOF=$(dd if=/dev/urandom bs=15 count=1 2>/dev/null | base64)
-          if [ -z "$LAST_TAG" ]; then
-            CHANGELOG=$(git log --pretty=format:'- %s (%h)' --max-count=20)
-          else
-            CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:'- %s (%h)')
-          fi
-          echo "content<<$EOF" >> "$GITHUB_OUTPUT"
-          echo "$CHANGELOG" >> "$GITHUB_OUTPUT"
-          echo "$EOF" >> "$GITHUB_OUTPUT"
-
-      - name: Create GitHub release
+      - name: Create Release
         uses: ncipollo/release-action@v1
         with:
           token: ${{ github.token }}
-          name: MK8DSB ${{ needs.build.outputs.next-version }}
-          tag: ${{ needs.build.outputs.next-version }}
+          tag: ${{ inputs.stable && needs.prepare.outputs.next-version || format('nightly-{0}', needs.prepare.outputs.next-version) }}
+          name: ${{ inputs.stable && format('MK8DSB {0}', needs.prepare.outputs.next-version) || format('Nightly {0}', needs.prepare.outputs.next-version) }}
+          prerelease: ${{ !inputs.stable }}
           draft: ${{ inputs.is-draft }}
           body: |
-            ${{ inputs.description }}
+            ${{ inputs.description || 'Nouveau build disponible.' }}
 
-            ## 🔧 Changelog
-            ${{ steps.changelog.outputs.content }}
-
-            ## 📥 Installation
-            Download the binary for your device (APK for Android, IPA for iOS).
-
-            ## 🔐 Verification
-            Verify the SHA256 checksum using `sha256sum.txt`.
-          artifacts: "mk8dsb_*,sha256sum.txt"
+            **Version:** ${{ needs.prepare.outputs.next-version }}
+            **Commit:** ${{ github.sha }}
+          artifacts: "dist/*.apk,dist/*.ipa,sha256sum.txt"
