--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,6 @@ on:
         type: boolean
         description: Stable release ?
         default: false
-      platform:
-        type: choice
-        description: Target platform
-        required: true
-        options: [android, ios, all]
-        default: android
       version-bump:
         type: choice
         description: Version level
@@ -29,7 +23,11 @@ on:
       skip-build:
         type: boolean
         default: false
-        description: Skip binary build ?
+        description: Skip APK build ?
+      skip-ios:
+        type: boolean
+        default: false
+        description: Skip iOS build ?
       is-draft:
         type: boolean
         description: Draft release ?
@@ -41,55 +39,56 @@ on:
 env:
   GITHUB_TOKEN: ${{ github.token }}
 
+# --------------------------------------------------
+# Check inputs
+# --------------------------------------------------
 jobs:
-  # 1. Préparation : On calcule la version une seule fois pour tout le monde
-  prepare:
+  check-inputs:
     runs-on: ubuntu-latest
+    steps:
+      - name: Exit if stable without description
+        if: ${{ inputs.stable && !inputs.description }}
+        run: |
+          echo "❌ Missing description for a stable release"
+          exit 1
+
+      - name: Warn if skip-build enabled
+        if: ${{ inputs.skip-build }}
+        run: |
+          echo "⚠️ skip-build enabled: no APK will be generated"
+
+      - name: Warn if skip-ios enabled
+        if: ${{ inputs.skip-ios }}
+        run: |
+          echo "⚠️ skip-ios enabled: no IPA will be generated"
+
+  # --------------------------------------------------
+  # Build job (Android)
+  # --------------------------------------------------
+  build:
+    runs-on: ubuntu-latest
+    needs: [check-inputs]
+
     outputs:
       next-version: ${{ steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}
+      build-name: ${{ steps.build-name.outputs.value }}
+      is-stable: ${{ inputs.stable }}
+      skip-build: ${{ inputs.skip-build }}
+
     steps:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      - name: Calculate stable version
-        id: version_build
-        if: ${{ inputs.stable }}
-        uses: reecetech/version-increment@2024.10.1
-        with:
-          scheme: semver
-          increment: ${{ inputs.version-bump }}
-          tag_prefix: v
-      - name: Get tag & commit
-        id: info
-        run: |
-          echo "tag=$(git tag -l --sort=-version:refname | grep -v '-' | head -n 1)" >> "$GITHUB_OUTPUT"
-          echo "hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-      - name: Store nightly version
-        id: nightly-version
-        if: ${{ !inputs.stable }}
-        run: echo "value=${{ steps.info.outputs.tag || 'v0.0.0' }}-${{ steps.info.outputs.hash }}" >> "$GITHUB_OUTPUT"
 
-  # 2. Build : En parallèle sur les bons OS (macOS pour iOS, Ubuntu pour Android)
-  build:
-    needs: [prepare]
-    if: ${{ !inputs.skip-build }}
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - ${{ (inputs.platform == 'all' || inputs.platform == 'android') && 'android' || '' }}
-          - ${{ (inputs.platform == 'all' || inputs.platform == 'ios') && 'ios' || '' }}
-        exclude:
-          - platform: ""
-
-    runs-on: ${{ matrix.platform == 'ios' && 'macos-latest' || 'ubuntu-latest' }}
-
-    steps:
-      - uses: actions/checkout@v5
       - uses: actions/setup-node@v5
         with:
           node-version: 20.x
           cache: npm
+
+      - name: Clear npm cache
+        if: ${{ inputs.reset-cache }}
+        run: npm cache clean --force
+
       - uses: expo/expo-github-action@v8
         with:
           eas-version: latest
@@ -97,88 +96,344 @@ jobs:
 
       - run: npm install
 
-      - name: Update Version and Config
+      - name: Get latest release tag
+        id: get-latest-tag
+        uses: pozetroninc/github-action-get-latest-release@master
+        with:
+          repository: ClementR22/MK8DSB
+          excludes: prerelease
+
+      # -------------------------
+      # Versioning
+      # -------------------------
+      - name: Calculate next stable version
+        id: version_build
+        if: ${{ inputs.stable }}
+        uses: reecetech/version-increment@2024.10.1
+        with:
+          scheme: semver
+          increment: ${{ inputs.version-bump }}
+          tag_prefix: v
+
+      - name: Get latest commit hash
+        id: get-latest-commit
+        run: echo "value=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+      - name: Store nightly version
+        id: nightly-version
+        if: ${{ !inputs.stable }}
         run: |
-          VERSION="${{ needs.prepare.outputs.next-version }}"
+          BASE="${{ steps.get-latest-tag.outputs.release || 'v0.0.0' }}"
+          VERSION="$BASE-${{ steps.get-latest-commit.outputs.value }}"
+          echo "value=$VERSION" >> "$GITHUB_OUTPUT"
+
+      # -------------------------
+      # Write version (IDEMPOTENT)
+      # -------------------------
+      - name: Update package.json & app.config.ts
+        run: |
+          VERSION="${{ inputs.stable && steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}"
           CLEAN_VERSION="${VERSION#v}"
 
-          # 1. Update package.json version
-          node -e "const fs = require('fs'); const pkg = require('./package.json'); pkg.version = '$CLEAN_VERSION'; fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));"
+          node -e "
+          const fs = require('fs');
+          const pkg = require('./package.json');
+          if (pkg.version !== '$CLEAN_VERSION') {
+            pkg.version = '$CLEAN_VERSION';
+            fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
+            console.log('package.json updated');
+          } else {
+            console.log('Version already set, skipping');
+          }
+          "
 
-          # 2. Update app.config.ts (Version + Bundle ID fix)
-          # Utilisation de com.clementrayer.mk8dsb (minuscules uniquement, pas d'underscore)
-          if [[ "$OSTYPE" == "darwin"* ]]; then
-            sed -i "" "s/{{VERSION}}/$VERSION/g" app.config.ts
-            # Remplacement plus agressif pour s'assurer que bundleIdentifier est présent dans le bloc ios
-            sed -i "" "s/supportsTablet: true,/supportsTablet: true, bundleIdentifier: 'com.clementrayer.mk8dsb',/g" app.config.ts
-          else
-            sed -i "s/{{VERSION}}/$VERSION/g" app.config.ts
-            sed -i "s/supportsTablet: true,/supportsTablet: true, bundleIdentifier: 'com.clementrayer.mk8dsb',/g" app.config.ts
-          fi
+          sed -i "s/{{VERSION}}/$VERSION/g" app.config.ts
 
-      - name: Android Version Code
+      # -------------------------
+      # Android build
+      # -------------------------
+      - name: Increment Android Version Code
         id: android-version
-        if: ${{ matrix.platform == 'android' }}
+        if: ${{ !inputs.skip-build }}
         run: |
-          VCODE=$(eas app:inspect --platform android --non-interactive 2>/dev/null | grep versionCode | awk '{print $2}' | tr -d '",') || echo "0"
-          echo "value=$((${VCODE:-0} + 1))" >> "$GITHUB_OUTPUT"
+          CURRENT_VCODE=$(eas app:inspect --platform android --non-interactive 2>/dev/null \
+            | grep versionCode | awk '{print $2}' | tr -d '",')
+          CURRENT_VCODE=${CURRENT_VCODE:-0}
+          echo "value=$((CURRENT_VCODE + 1))" >> "$GITHUB_OUTPUT"
 
-      - name: Build Binary
+      - name: Build APK
+        if: ${{ !inputs.skip-build }}
         env:
           ANDROID_VERSION_CODE: ${{ steps.android-version.outputs.value }}
-        run: eas build --platform ${{ matrix.platform }} --profile preview --local --non-interactive
+        run: eas build --platform android --profile preview --local --non-interactive
 
-      - name: Package Artifact
+      - name: Store build name
+        id: build-name
+        if: ${{ !inputs.skip-build }}
         run: |
-          VERSION="${{ needs.prepare.outputs.next-version }}"
-          PREFIX="${{ inputs.stable && 'mk8dsb_' || 'mk8dsb-nightly_' }}"
-          FILE_NAME=""
-          if [ -f build-*.apk ]; then
-            FILE_NAME="${PREFIX}${VERSION}.apk"
-            mv build-*.apk "$FILE_NAME"
-          elif [ -f build-*.ipa ]; then
-            FILE_NAME="${PREFIX}${VERSION}.ipa"
-            mv build-*.ipa "$FILE_NAME"
+          if [ "${{ inputs.stable }}" = "true" ]; then
+            echo "value=mk8dsb_${{ steps.version_build.outputs.v-version }}.apk" >> "$GITHUB_OUTPUT"
+          else
+            echo "value=mk8dsb-nightly_${{ steps.nightly-version.outputs.value }}.apk" >> "$GITHUB_OUTPUT"
           fi
-          # Checksum generation (universal)
-          shasum -a 256 "$FILE_NAME" > "checksum-${{ matrix.platform }}.txt"
 
-      - name: Upload
+      - name: Rename APK
+        if: ${{ !inputs.skip-build }}
+        run: mv build-*.apk "${{ steps.build-name.outputs.value }}"
+
+      - name: Generate SHA256 for APK
+        if: ${{ !inputs.skip-build }}
+        run: sha256sum "${{ steps.build-name.outputs.value }}" > sha256sum-android.txt
+
+      - name: Upload Android artifacts
+        if: ${{ !inputs.skip-build }}
         uses: actions/upload-artifact@v4
         with:
-          name: build-${{ matrix.platform }}
+          name: android-artifacts
           path: |
             *.apk
-            *.ipa
-            checksum-*.txt
-          if-no-files-found: error
+            sha256sum-android.txt
 
-  # 3. Release : On regroupe les artefacts et on publie
-  publish:
-    needs: [prepare, build]
-    runs-on: ubuntu-latest
+      - name: Upload package.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-json
+          path: package.json
+
+  # --------------------------------------------------
+  # Build job (iOS)
+  # --------------------------------------------------
+  build-ios:
+    runs-on: macos-latest
+    needs: [check-inputs]
+    if: ${{ !inputs.skip-ios }}
+
+    outputs:
+      ios-build-name: ${{ steps.ios-build-name.outputs.value }}
+
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/download-artifact@v4
         with:
-          path: dist
-          pattern: build-*
-          merge-multiple: true
+          fetch-depth: 0
 
-      - name: Merge Checksums
-        run: cat dist/checksum-*.txt > sha256sum.txt
+      - uses: actions/setup-node@v5
+        with:
+          node-version: 20.x
+          cache: npm
 
-      - name: Create Release
+      - name: Clear npm cache
+        if: ${{ inputs.reset-cache }}
+        run: npm cache clean --force
+
+      - uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - run: npm install
+
+      - name: Get latest release tag
+        id: get-latest-tag
+        uses: pozetroninc/github-action-get-latest-release@master
+        with:
+          repository: ClementR22/MK8DSB
+          excludes: prerelease
+
+      # -------------------------
+      # Versioning (same as Android)
+      # -------------------------
+      - name: Calculate next stable version
+        id: version_build
+        if: ${{ inputs.stable }}
+        uses: reecetech/version-increment@2024.10.1
+        with:
+          scheme: semver
+          increment: ${{ inputs.version-bump }}
+          tag_prefix: v
+
+      - name: Get latest commit hash
+        id: get-latest-commit
+        run: echo "value=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+      - name: Store nightly version
+        id: nightly-version
+        if: ${{ !inputs.stable }}
+        run: |
+          BASE="${{ steps.get-latest-tag.outputs.release || 'v0.0.0' }}"
+          VERSION="$BASE-${{ steps.get-latest-commit.outputs.value }}"
+          echo "value=$VERSION" >> "$GITHUB_OUTPUT"
+
+      - name: Update package.json & app.config.ts
+        run: |
+          VERSION="${{ inputs.stable && steps.version_build.outputs.v-version || steps.nightly-version.outputs.value }}"
+          CLEAN_VERSION="${VERSION#v}"
+
+          node -e "
+          const fs = require('fs');
+          const pkg = require('./package.json');
+          if (pkg.version !== '$CLEAN_VERSION') {
+            pkg.version = '$CLEAN_VERSION';
+            fs.writeFileSync('package.json', JSON.stringify(pkg, null, 2));
+            console.log('package.json updated');
+          } else {
+            console.log('Version already set, skipping');
+          }
+          "
+
+          sed -i '' "s/{{VERSION}}/$VERSION/g" app.config.ts
+
+      # -------------------------
+      # iOS build
+      # -------------------------
+      - name: Increment iOS Build Number
+        id: ios-version
+        run: |
+          CURRENT_BUILD=$(eas app:inspect --platform ios --non-interactive 2>/dev/null \
+            | grep buildNumber | awk '{print $2}' | tr -d '",')
+          CURRENT_BUILD=${CURRENT_BUILD:-0}
+          echo "value=$((CURRENT_BUILD + 1))" >> "$GITHUB_OUTPUT"
+
+      - name: Build IPA
+        env:
+          IOS_BUILD_NUMBER: ${{ steps.ios-version.outputs.value }}
+          IOS_VERSION_CODE: ${{ steps.ios-version.outputs.value }}
+        run: eas build --platform ios --profile preview --local --non-interactive
+
+      - name: Store iOS build name
+        id: ios-build-name
+        run: |
+          if [ "${{ inputs.stable }}" = "true" ]; then
+            echo "value=mk8dsb_${{ steps.version_build.outputs.v-version }}.ipa" >> "$GITHUB_OUTPUT"
+          else
+            echo "value=mk8dsb-nightly_${{ steps.nightly-version.outputs.value }}.ipa" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Rename IPA
+        run: mv build-*.ipa "${{ steps.ios-build-name.outputs.value }}"
+
+      - name: Generate SHA256 for IPA
+        run: shasum -a 256 "${{ steps.ios-build-name.outputs.value }}" > sha256sum-ios.txt
+
+      - name: Upload iOS artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-artifacts
+          path: |
+            *.ipa
+            sha256sum-ios.txt
+
+  # --------------------------------------------------
+  # Nightly release
+  # --------------------------------------------------
+  nightly:
+    if: ${{ !inputs.stable && (!inputs.skip-build || !inputs.skip-ios) }}
+    needs: [build, build-ios]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Android artifacts
+        if: ${{ !inputs.skip-build }}
+        uses: actions/download-artifact@v4
+        with:
+          name: android-artifacts
+
+      - name: Download iOS artifacts
+        if: ${{ !inputs.skip-ios }}
+        uses: actions/download-artifact@v4
+        with:
+          name: ios-artifacts
+
+      - name: Publish nightly release
         uses: ncipollo/release-action@v1
         with:
           token: ${{ github.token }}
-          tag: ${{ inputs.stable && needs.prepare.outputs.next-version || format('nightly-{0}', needs.prepare.outputs.next-version) }}
-          name: ${{ inputs.stable && format('MK8DSB {0}', needs.prepare.outputs.next-version) || format('Nightly {0}', needs.prepare.outputs.next-version) }}
-          prerelease: ${{ !inputs.stable }}
+          tag: nightly-${{ needs.build.outputs.next-version }}
+          name: Nightly ${{ needs.build.outputs.next-version }}
+          prerelease: true
+          body: |
+            ⚠️ Unstable build – use at your own risk
+
+            ${{ inputs.description || 'No description provided' }}
+
+            **Commit:** ${{ github.sha }}
+          artifacts: "mk8dsb-nightly_*.apk,mk8dsb-nightly_*.ipa,sha256sum-*.txt"
+
+  # --------------------------------------------------
+  # Stable release
+  # --------------------------------------------------
+  release:
+    if: ${{ inputs.stable && (!inputs.skip-build || !inputs.skip-ios) }}
+    needs: [build, build-ios]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Download Android artifacts
+        if: ${{ !inputs.skip-build }}
+        uses: actions/download-artifact@v4
+        with:
+          name: android-artifacts
+
+      - name: Download iOS artifacts
+        if: ${{ !inputs.skip-ios }}
+        uses: actions/download-artifact@v4
+        with:
+          name: ios-artifacts
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-json
+
+      - name: Commit version bump
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add package.json
+          git commit -m "chore: bump version to ${{ needs.build.outputs.next-version }}" || echo "No changes"
+          git push origin HEAD:${{ github.ref_name }}
+
+      - name: Generate changelog
+        id: changelog
+        run: |
+          # Récupère le dernier tag qui ne contient pas de tiret (ex: évite nightly-xxx)
+          LAST_TAG=$(git tag -l --sort=-version:refname | grep -v '-' | head -n 2 | tail -n 1)
+
+          echo "Generating changelog since $LAST_TAG"
+
+          # Création d'un délimiteur unique pour éviter les erreurs de parsing
+          EOF=$(dd if=/dev/urandom bs=15 count=1 2>/dev/null | base64)
+
+          if [ -z "$LAST_TAG" ]; then
+            CHANGELOG=$(git log --pretty=format:'- %s (%h)' --max-count=20)
+          else
+            CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:'- %s (%h)')
+          fi
+
+          # Écriture sécurisée dans GITHUB_OUTPUT
+          echo "content<<$EOF" >> "$GITHUB_OUTPUT"
+          echo "$CHANGELOG" >> "$GITHUB_OUTPUT"
+          echo "$EOF" >> "$GITHUB_OUTPUT"
+
+      - name: Create GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ github.token }}
+          name: MK8DSB ${{ needs.build.outputs.next-version }}
+          tag: ${{ needs.build.outputs.next-version }}
           draft: ${{ inputs.is-draft }}
           body: |
-            ${{ inputs.description || 'Nouveau build disponible.' }}
+            ${{ inputs.description }}
 
-            **Version:** ${{ needs.prepare.outputs.next-version }}
-            **Commit:** ${{ github.sha }}
-          artifacts: "dist/*.apk,dist/*.ipa,sha256sum.txt"
+            ## 🔧 Changelog
+            ${{ steps.changelog.outputs.content }}
+
+            ## 📥 Installation
+
+            **Android:** Download the APK file and install it on your Android device.
+
+            **iOS:** Download the IPA file. You'll need to sign it with your own certificate or use AltStore/Sideloadly to install it.
+
+            ## 🔐 Verification
+            Verify the SHA256 checksums using the provided `sha256sum-*.txt` files.
+          artifacts: "mk8dsb_*.apk,mk8dsb_*.ipa,sha256sum-*.txt"
